# scrive-apidocs

./: .dockerignore  .ghci  .gitattributes  .gitignore  .hlint.yaml  .mailmap  .stylish-haskell.yaml  .travis.yml  404.html  AUTHORS  CNAME  HLint.hs  INSTALL  Makefile  README.md  Setup.hs  all-releases.nix  brittany.yaml  cabal-deps.project  cabal-ghc86.project  cabal-ghc86.project.freeze  cabal-ghc88.project  cabal-ghc88.project.freeze  cabal-nix.project  cabal.config  cabal.project  cabal.project.freeze  cabal.project.template  cabal_config_freeze.sh  config.rb  configure  default.nix  deploy.sh  deploy_rsa.enc  devRunner.sh  env.sh  flow-nginx.conf  hie.yaml  index.html  kontrakcja.cabal  (+13 more)
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
GuardTime/: versions.txt
Shake/: Cabal.hs  DBSchema.hs  Flags.hs  GetCabalDeps.hs  GetHsDeps.hs  GitHub.hs  NewBuild.hs  Oracles.hs  Shake.hs  TeamCity.hs  Utils.hs  deployStagingProduction.sh  deployToDev.sh  deployToFeaturesTestbed.sh  kontrakcja-shake.cabal  tc_exports.sh
Shake/Shake/: Cabal.hs  DBSchema.hs  Flags.hs  GetHsDeps.hs  NewBuild.hs  Oracles.hs  TeamCity.hs  Utils.hs
Transifex/: Synch.hs  Utils.hs
build-scripts/: Teamcity.hs  checkBuild.sh  configure_only.hs  createCoverageReports.sh  createHLintReports.sh  createJSLintReports.sh  deployDevNginxRules.sh  deployDevRules.sh  deployFeaturesTestbedNginxRules.sh  deployToDev.sh  getBuildInfo.py  github.sh  productionBuild.sh  productionBuild2.sh  restoreDatabase.sh  runAllSeleniumTests.sh  runAllUnitTests.sh  runCleanCompile.sh  runDevCompile.sh  runFrontendCompile.sh  runIncrementalCompile.sh  runner.hs  teamcity_cabal_sandbox.pl  teamcity_common.pm  upgradeEnvironment.sh  upgradeProduction.sh
certs/: credentials.pem  dev-admin.pem  dev.pem  nets_test_user_cert.pem  nets_test_user_privkey.pem  steria3.pem
ci/: Dockerfile  known_hosts  supervisord.conf
configuration-templates/: README.md  cron.conf.template  kontrakcja.conf.template  kontrakcja_test.conf.template  mailing_server.conf.template  messenger_server.conf.template
cron/: CronMain.hs
doc/: continuous-integration.md  nix.md
docker/: Dockerfile  supervisord.conf
documentation/: README.md  responses.yaml  scrive_api.yaml  scrive_user_api.yaml
evidence-package/: README.md  html5check.py  pre.sh  processHTML.hs  runProcess.sh  samples.p  style.css
files/: Appendix 1 Evidence Quality Framework.html  Appendix 2 Service Description.html  Appendix 6 Digital Signature Documentation.html  Digital_Signature_Documentation_Part_I.html  Digital_Signature_Documentation_Part_II.html  Evidence Quality of Scrive E-signed Documents.html  Evidence Quality of Scrive Esigned Documents.html  Evidence_Documentation.html  evidenceDocumentation.html  verification.html
frontend/: .babelrc  .bowerrc  .eslintrc.json  .gitignore  .jshintrc  Gruntfile.js  NOTTODO.json  README.md  bower.json  default.nix  default.nix.patch  jscs_manifest.json  karma.conf.js  karma.fast.conf.js  linter_manifest.json  node-packages.nix  package-lock.json  package.json  sync-nix.sh  webpack.config.js
frontend-elm/: .ignore  elm-analyse.json  elm-package.json  elm-srcs.nix  elm.json  elm.nix  node-packages.nix  package-lock.json  package.json  sync-nix.sh  webpack.config.js
ghcid/: .ghci  .ghcid  README.md  ghcid-nix.sh
html/: about.html  benefits.html  board.html  clients.html  contact.html  features.html  index.html  legal.html  partners.html  priceplan.html  pricing.html  privacypolicy.html  sakerhet.html  security.html  sekretesspolicy.html  terms.html  termsofuse.html  why.html
inc/: Amazon.hs  AppLogger.hs  Configuration.hs  Cron.hs  Crypto.hs  DB.hs  IPAddress.hs  Kontra.hs  KontraPrelude.hs  Log.hs  MagicHash.hs  MemCache.hs  MinutesTime.hs  Misc.hs  Network.hs  OurPrelude.hs  OurServerPart.hs  Undefined.hs
mailer/: Assembler.hs  Dispatcher.hs  Handlers.hs  Mailer.hs  MailingServer.hs  MailingServerConf.hs  OpenDocument.hs  OurPrelude.hs  SendGrid.hs  Sender.hs
misc/: Misc.hs
new-frontend/: README.md  link-new-frontend.sh
nginx/: nginx_rules_apitestbed.json  nginx_rules_dev.json  nginx_rules_featurestestbed.json  nginx_rules_prod.json  nginx_rules_prod_list.json  nginx_rules_staging.json  nginx_rules_staging_list.json
nix/: README.md  haskell-deps.json  kontrakcja-shell-setup.sh  kontrakcja-test-setup.sh  nixpkgs-config.nix  nixpkgs-revision  read-cabal-config.py  sigshield.c  sigshield.nix
pdfseal/: pdfseal.cabal
pdfsealjava/: AppendMode.java  Makefile  Manifest.txt  PDFSeal.java  example_spec.json
pdftools/: Matrix.hs  PdfModel.hs
postgresql_autodoc/: dot.tmpl
public/: contact.html  crossdomain.xml  features.html  index.html  legal.html  maintenance.html  petitions.html  pricing.html  privacypolicy.html  reference_screenshot_seconds.txt  resources.spec  security.html  termsofuse.html  toolarge.html  why.html
pure_sql/: convert_files_for_purging_into_delete_script.sh  database_performance.sql  find_files_for_purging.sql  free_accounts_to_exploit.sql  invoice_stats.sql  merge_user_accounts.sql  purge_documents.sql  run_local.sh  run_remote.sh  update_reference_screenshot.sh
routinglist/: RoutingListMain.hs
scripts/: ScriptsPrelude.hs  UrlList.hs  UrlList.sh  bottom  bottom2  browser_stats.py  cabal_freeze.sh  connect-to-db.sh  create_symlinks.sh  create_test_database_anew.sh  deadtemplates.sh  detect_old_localizations.hs  detect_old_templates.hs  dump_all_data.sh  genmime.py  hooglescript  logrotate.conf  logrotate.staging.conf  marketing.sql  nix-test-setup.sh  parsesignresponse.py  pem-to-one-line.sh  pg_dump_database.sh  pg_recreate_database.sh  pg_restore_database.sh  prepare_flow.py  readmime.py  restore_all_data.sh  review_reference_screenshots.sh  s3cfg  saml-metadata-to-config-no-nix.sh  saml-metadata-to-config.sh  snapshot.sh  snapshotcrontab  snapshotlogs.sh  sort_imports.hs  sort_imports.sh  take_reference_screenshots.py  templatesreport.py  top  (+3 more)
scrivepdftools/: itextkey.xml
selenium-test/: README  README.md  TODO  driver_wrapper.py  install_deps.sh  instructions.txt  requirements.txt  run.py  (+9 more)
(+4693 files in other folders)
