Name: kontrakcja
Version: 1.0
Author: Gracjan Polak
Copyright: 2010-2011
Stability: Experimental
Category: Web
Synopsis: Ultimate signing solution
Description:
        Sign documents online
Cabal-version: >= 1.18
Build-type: Simple


-- Note:
--
-- To allow warnings use command:
--
--    cabal configure --ghc-option=-Wwarn
--
-- Another useful command:
--
--    cabal configure --ghc-option=-fdefer-type-errors
--
--
-- Note about TemplateHaskell
--
-- Template Haskell is code that executes inside the compiler. It is
-- loaded from object *.o file that has to be compiled before.  This
-- object file must be a normal-vanilla one, not profiled. Here is
-- where trouble starts: since we want stack traces we want profiling
-- executables, but to build those template haskell normal ones need
-- to be loaded.
--
-- Cabal hacks around it by forcing vanilla compilation if it sees
-- TemplateHaskell in Extensions field. That is upside down, as
-- vanilla is needed for sources that *define* template Haskell
-- functions, although those source themselves do not use template
-- Haskell.
--
-- Whole mess results in double compilation and over twice the time
-- spent waiting. Possible way out is to:
-- - move modules that define template haskell function into separate
--   library, make everything else depend on it, enable TH there
-- - remove TH from extensions from everything else, add
--   LANGUAGE TemplateHaskell at the top of each file where it is used
-- - use TH only where it is trully needed
--

Flag server-coverage
  Description: Build server with coverage instrumentation
  Manual: True
  Default: False

Flag test-coverage
  Description: Collects tests coverage status
  Manual: True
  Default: False

Executable kontrakcja-server

  Hs-source-dirs: inc misc src cron/inc mailer/inc docconv/src messenger/src messenger/inc pdftools

  GHC-Options: -Werror -Wall -fwarn-tabs -fwarn-unused-do-bind -fwarn-incomplete-record-updates -fno-warn-type-defaults
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  if flag(server-coverage)
    GHC-Options: -fhpc

  Main-Is: Main.hs
  GHC-options: -main-is Main

  Build-depends: AES
  Build-depends: aeson
  Build-depends: aeson-pretty
  Build-depends: attoparsec
  Build-depends: base < 6
  Build-depends: base16-bytestring
  Build-depends: base64-bytestring
  Build-depends: binary
  Build-depends: bytestring
  Build-depends: cond
  Build-depends: conduit
  Build-depends: containers
  Build-depends: Crypto
  Build-depends: crypto-api
  Build-depends: cryptohash
  Build-depends: curl
  Build-depends: data-default
  Build-depends: dataenc
  Build-depends: Decimal
  Build-depends: deepseq
  Build-depends: digest
  Build-depends: directory
  Build-depends: DRBG
  Build-depends: exceptions
  Build-depends: explicit-exception
  Build-depends: fields-json
  Build-depends: filepath
  Build-depends: happstack-server
  Build-depends: happstack-static-routing
  Build-depends: HaXml
  Build-depends: hpqtypes
  Build-depends: hS3
  Build-depends: HStringTemplate
  Build-depends: HTTP
  Build-depends: HUnit
  Build-depends: iconv
  Build-depends: invariant
  Build-depends: json
  Build-depends: kontrakcja-templates
  Build-depends: lifted-base
  Build-depends: lifted-threads
  Build-depends: MissingH
  Build-depends: mixpanel
  Build-depends: mmap
  Build-depends: monad-control
  Build-depends: mtl
  Build-depends: network
  Build-depends: old-locale
  Build-depends: pretty
  Build-depends: pretty-show
  Build-depends: primitive
  Build-depends: process
  Build-depends: QuickCheck
  Build-depends: random
  Build-depends: recurly
  Build-depends: regex-tdfa
  Build-depends: resource-pool
  Build-depends: soap
  Build-depends: split
  Build-depends: spreadsheet
  Build-depends: stm
  Build-depends: tagsoup
  Build-depends: template-haskell
  Build-depends: temporary
  Build-depends: test-framework
  Build-depends: test-framework-hunit
  Build-depends: test-framework-quickcheck2
  Build-depends: text
  Build-depends: text-icu
  Build-depends: threads
  Build-depends: time
  Build-depends: transformers
  Build-depends: transformers-base
  Build-depends: unix
  Build-depends: unjson
  Build-depends: unordered-containers
  Build-depends: utf8-string
  Build-depends: vector
  Build-depends: xml-conduit
  Build-depends: xml-conduit-writer
  Build-depends: xml-types
  Build-depends: yaml
  Build-depends: zip-archive
  Build-depends: zlib

  Default-Language: Haskell2010
  Default-Extensions:
    BangPatterns,
    ConstraintKinds,
    DeriveDataTypeable,
    DeriveFunctor,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    MultiParamTypeClasses,
    MultiWayIf,
    NamedFieldPuns,
    NoImplicitPrelude,
    OverloadedStrings,
    PatternGuards,
    RankNTypes,
    RecordWildCards,
    ScopedTypeVariables,
    StandaloneDeriving,
    TemplateHaskell,
    TupleSections,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances,
    UndecidableInstances

Executable cron

  Hs-source-dirs: inc misc src cron/inc cron/src mailer/inc docconv/src messenger/inc pdftools

  GHC-Options: -Werror -Wall -fwarn-tabs -fwarn-unused-do-bind -fwarn-incomplete-record-updates -fno-warn-type-defaults
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  if flag(server-coverage)
    GHC-Options: -fhpc

  Build-depends: AES
  Build-depends: aeson
  Build-depends: aeson-pretty
  Build-depends: attoparsec
  Build-depends: base < 6
  Build-depends: base16-bytestring
  Build-depends: base64-bytestring
  Build-depends: binary
  Build-depends: bytestring
  Build-depends: cond
  Build-depends: conduit
  Build-depends: containers
  Build-depends: Crypto
  Build-depends: crypto-api
  Build-depends: cryptohash
  Build-depends: data-default
  Build-depends: dataenc
  Build-depends: Decimal
  Build-depends: deepseq
  Build-depends: digest
  Build-depends: directory
  Build-depends: DRBG
  Build-depends: exceptions
  Build-depends: explicit-exception
  Build-depends: fields-json
  Build-depends: filepath
  Build-depends: happstack-server
  Build-depends: happstack-static-routing
  Build-depends: HaXml
  Build-depends: hpqtypes
  Build-depends: hS3
  Build-depends: HStringTemplate
  Build-depends: HTTP
  Build-depends: HUnit
  Build-depends: iconv
  Build-depends: invariant
  Build-depends: json
  Build-depends: kontrakcja-templates
  Build-depends: lifted-base
  Build-depends: lifted-threads
  Build-depends: MissingH
  Build-depends: mixpanel
  Build-depends: mmap
  Build-depends: monad-control
  Build-depends: mtl
  Build-depends: network
  Build-depends: old-locale
  Build-depends: pretty-show
  Build-depends: process
  Build-depends: QuickCheck
  Build-depends: random
  Build-depends: recurly
  Build-depends: regex-tdfa
  Build-depends: resource-pool
  Build-depends: soap
  Build-depends: split
  Build-depends: spreadsheet
  Build-depends: stm
  Build-depends: tagsoup
  Build-depends: template-haskell
  Build-depends: temporary
  Build-depends: test-framework
  Build-depends: test-framework-hunit
  Build-depends: test-framework-quickcheck2
  Build-depends: text
  Build-depends: threads
  Build-depends: time
  Build-depends: transformers
  Build-depends: transformers-base
  Build-depends: unix
  Build-depends: unjson
  Build-depends: unordered-containers
  Build-depends: utf8-string
  Build-depends: vector
  Build-depends: xml-conduit
  Build-depends: xml-conduit-writer
  Build-depends: xml-types
  Build-depends: yaml
  Build-depends: zip-archive
  Build-depends: zlib

  Main-is: Cron.hs
  GHC-options: -main-is Cron

  Default-Language: Haskell2010
  Default-Extensions:
    BangPatterns,
    ConstraintKinds
    DeriveDataTypeable,
    DeriveFunctor,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    MultiParamTypeClasses,
    MultiWayIf,
    NamedFieldPuns,
    NoImplicitPrelude,
    OverloadedStrings,
    PatternGuards,
    RankNTypes,
    RecordWildCards,
    ScopedTypeVariables,
    StandaloneDeriving,
    TemplateHaskell,
    TupleSections,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances,
    UndecidableInstances

Executable kontrakcja-migrate
  Hs-source-dirs: inc misc src cron/inc messenger/inc mailer/inc docconv/src

  GHC-Options: -Werror -Wall -fwarn-tabs -fwarn-unused-do-bind -fwarn-incomplete-record-updates -fno-warn-type-defaults
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  if flag(server-coverage)
    GHC-Options: -fhpc

  Main-is: AppDBMain.hs
  GHC-options: -main-is AppDBMain

  Build-depends: AES
  Build-depends: aeson
  Build-depends: aeson-pretty
  Build-depends: attoparsec
  Build-depends: base < 6
  Build-depends: base16-bytestring
  Build-depends: base64-bytestring
  Build-depends: binary
  Build-depends: bytestring
  Build-depends: cond
  Build-depends: conduit
  Build-depends: containers
  Build-depends: Crypto
  Build-depends: crypto-api
  Build-depends: cryptohash
  Build-depends: data-default
  Build-depends: dataenc
  Build-depends: Decimal
  Build-depends: deepseq
  Build-depends: digest
  Build-depends: directory
  Build-depends: DRBG
  Build-depends: exceptions
  Build-depends: explicit-exception
  Build-depends: fields-json
  Build-depends: filepath
  Build-depends: happstack-server
  Build-depends: happstack-static-routing
  Build-depends: HaXml
  Build-depends: hpqtypes
  Build-depends: hS3
  Build-depends: HStringTemplate
  Build-depends: HTTP
  Build-depends: HUnit
  Build-depends: iconv
  Build-depends: invariant
  Build-depends: json
  Build-depends: kontrakcja-templates
  Build-depends: lifted-base
  Build-depends: lifted-threads
  Build-depends: MissingH
  Build-depends: mixpanel
  Build-depends: mmap
  Build-depends: monad-control
  Build-depends: mtl
  Build-depends: network
  Build-depends: old-locale
  Build-depends: pretty-show
  Build-depends: process
  Build-depends: QuickCheck
  Build-depends: random
  Build-depends: recurly
  Build-depends: regex-tdfa
  Build-depends: resource-pool
  Build-depends: split
  Build-depends: spreadsheet
  Build-depends: stm
  Build-depends: tagsoup
  Build-depends: template-haskell
  Build-depends: temporary
  Build-depends: test-framework
  Build-depends: test-framework-hunit
  Build-depends: test-framework-quickcheck2
  Build-depends: text
  Build-depends: threads
  Build-depends: time
  Build-depends: transformers
  Build-depends: transformers-base
  Build-depends: unix
  Build-depends: unjson
  Build-depends: unordered-containers
  Build-depends: utf8-string
  Build-depends: vector
  Build-depends: xml-conduit
  Build-depends: xml-types
  Build-depends: yaml
  Build-depends: zip-archive
  Build-depends: zlib

  Default-Language: Haskell2010
  Default-Extensions:
    BangPatterns,
    DeriveDataTypeable,
    DeriveFunctor,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    MultiParamTypeClasses,
    MultiWayIf,
    NamedFieldPuns,
    NoImplicitPrelude,
    OverloadedStrings,
    PatternGuards,
    RankNTypes,
    RecordWildCards,
    ScopedTypeVariables,
    StandaloneDeriving,
    TemplateHaskell,
    TupleSections,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances,
    UndecidableInstances

Executable mailing-server

  Hs-source-dirs: inc misc mailer/src mailer/inc docconv/src

  GHC-Options: -Werror -Wall -fwarn-tabs -fwarn-unused-do-bind -fwarn-incomplete-record-updates -fno-warn-type-defaults
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  if flag(server-coverage)
    GHC-Options: -fhpc

  Main-is: MailingServer.hs
  GHC-options: -main-is MailingServer

  Build-depends: AES
  Build-depends: aeson
  Build-depends: aeson-pretty
  Build-depends: attoparsec
  Build-depends: base < 6
  Build-depends: base16-bytestring
  Build-depends: base64-bytestring
  Build-depends: binary
  Build-depends: bytestring
  Build-depends: cond
  Build-depends: conduit
  Build-depends: containers
  Build-depends: Crypto
  Build-depends: crypto-api
  Build-depends: cryptohash
  Build-depends: data-default
  Build-depends: dataenc
  Build-depends: Decimal
  Build-depends: deepseq
  Build-depends: directory
  Build-depends: DRBG
  Build-depends: exceptions
  Build-depends: explicit-exception
  Build-depends: fields-json
  Build-depends: filepath
  Build-depends: happstack-server
  Build-depends: happstack-static-routing
  Build-depends: HaXml
  Build-depends: hpqtypes
  Build-depends: hS3
  Build-depends: HStringTemplate
  Build-depends: HTTP
  Build-depends: HUnit
  Build-depends: iconv
  Build-depends: json
  Build-depends: kontrakcja-templates
  Build-depends: lifted-base
  Build-depends: lifted-threads
  Build-depends: MissingH
  Build-depends: mixpanel
  Build-depends: mmap
  Build-depends: monad-control
  Build-depends: mtl
  Build-depends: network
  Build-depends: old-locale
  Build-depends: pretty-show
  Build-depends: process
  Build-depends: QuickCheck
  Build-depends: random
  Build-depends: recurly
  Build-depends: regex-tdfa
  Build-depends: resource-pool
  Build-depends: split
  Build-depends: spreadsheet
  Build-depends: stm
  Build-depends: tagsoup
  Build-depends: template-haskell
  Build-depends: temporary
  Build-depends: test-framework
  Build-depends: test-framework-hunit
  Build-depends: test-framework-quickcheck2
  Build-depends: text
  Build-depends: threads
  Build-depends: time
  Build-depends: transformers
  Build-depends: transformers-base
  Build-depends: unix
  Build-depends: unjson
  Build-depends: unordered-containers
  Build-depends: utf8-string
  Build-depends: vector
  Build-depends: yaml
  Build-depends: zip-archive
  Build-depends: zlib

  Default-Language: Haskell2010
  Default-Extensions:
    BangPatterns,
    DeriveDataTypeable,
    DeriveFunctor,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    MultiParamTypeClasses,
    MultiWayIf,
    NamedFieldPuns,
    NoImplicitPrelude,
    OverloadedStrings,
    PatternGuards,
    RankNTypes,
    RecordWildCards,
    ScopedTypeVariables,
    StandaloneDeriving,
    TemplateHaskell,
    TupleSections,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances,
    UndecidableInstances

Executable messenger-server

  Hs-source-dirs: src inc misc messenger/src messenger/inc

  GHC-Options: -Werror -Wall -fwarn-tabs -fwarn-unused-do-bind -fwarn-incomplete-record-updates -fno-warn-type-defaults
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  if flag(server-coverage)
    GHC-Options: -fhpc

  Main-is: MessengerServer.hs
  GHC-options: -main-is MessengerServer

  Build-depends: AES
  Build-depends: aeson
  Build-depends: aeson-pretty
  Build-depends: attoparsec
  Build-depends: base < 6
  Build-depends: base16-bytestring
  Build-depends: base64-bytestring
  Build-depends: binary
  Build-depends: bytestring
  Build-depends: cond
  Build-depends: conduit
  Build-depends: containers
  Build-depends: Crypto
  Build-depends: crypto-api
  Build-depends: cryptohash
  Build-depends: data-default
  Build-depends: dataenc
  Build-depends: Decimal
  Build-depends: deepseq
  Build-depends: directory
  Build-depends: DRBG
  Build-depends: exceptions
  Build-depends: explicit-exception
  Build-depends: fields-json
  Build-depends: filepath
  Build-depends: happstack-server
  Build-depends: happstack-static-routing
  Build-depends: HaXml
  Build-depends: hpqtypes
  Build-depends: hS3
  Build-depends: HStringTemplate
  Build-depends: HTTP
  Build-depends: HUnit
  Build-depends: iconv
  Build-depends: json
  Build-depends: kontrakcja-templates
  Build-depends: lifted-base
  Build-depends: lifted-threads
  Build-depends: MissingH
  Build-depends: mixpanel
  Build-depends: mmap
  Build-depends: monad-control
  Build-depends: mtl
  Build-depends: network
  Build-depends: old-locale
  Build-depends: pretty-show
  Build-depends: process
  Build-depends: QuickCheck
  Build-depends: random
  Build-depends: recurly
  Build-depends: regex-tdfa
  Build-depends: resource-pool
  Build-depends: split
  Build-depends: spreadsheet
  Build-depends: stm
  Build-depends: tagsoup
  Build-depends: template-haskell
  Build-depends: temporary
  Build-depends: test-framework
  Build-depends: test-framework-hunit
  Build-depends: test-framework-quickcheck2
  Build-depends: text
  Build-depends: threads
  Build-depends: time
  Build-depends: transformers
  Build-depends: transformers-base
  Build-depends: unix
  Build-depends: unjson
  Build-depends: unordered-containers
  Build-depends: utf8-string
  Build-depends: vector
  Build-depends: yaml
  Build-depends: zip-archive
  Build-depends: zlib

  Default-Language: Haskell2010
  Default-Extensions:
    BangPatterns,
    DeriveDataTypeable,
    DeriveFunctor,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    MultiParamTypeClasses,
    MultiWayIf,
    NamedFieldPuns,
    NoImplicitPrelude,
    OverloadedStrings,
    PatternGuards,
    RankNTypes,
    RecordWildCards,
    ScopedTypeVariables,
    StandaloneDeriving,
    TemplateHaskell,
    TupleSections,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances,
    UndecidableInstances


Executable kontrakcja-test

  Hs-source-dirs: inc misc test/src src cron/inc mailer/inc mailer/src docconv/src docconv/test/src messenger/src messenger/inc pdftools

  GHC-Options: -Werror -Wall -fwarn-tabs -fwarn-unused-do-bind -fwarn-incomplete-record-updates -fno-warn-type-defaults
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  if flag(test-coverage)
    GHC-Options: -fhpc

  Main-is: TestMain.hs
  GHC-options: -main-is TestMain

  Build-depends: AES
  Build-depends: aeson
  Build-depends: aeson-pretty
  Build-depends: attoparsec
  Build-depends: base < 6
  Build-depends: base16-bytestring
  Build-depends: base64-bytestring
  Build-depends: binary
  Build-depends: bytestring
  Build-depends: cond
  Build-depends: conduit
  Build-depends: containers
  Build-depends: Crypto
  Build-depends: crypto-api
  Build-depends: cryptohash
  Build-depends: data-default
  Build-depends: dataenc
  Build-depends: Decimal
  Build-depends: deepseq
  Build-depends: digest
  Build-depends: directory
  Build-depends: DRBG
  Build-depends: exceptions
  Build-depends: explicit-exception
  Build-depends: fields-json
  Build-depends: filepath
  Build-depends: happstack-server
  Build-depends: happstack-static-routing
  Build-depends: HaXml
  Build-depends: hpqtypes
  Build-depends: hS3
  Build-depends: HStringTemplate
  Build-depends: HTTP
  Build-depends: HUnit
  Build-depends: iconv
  Build-depends: invariant
  Build-depends: json
  Build-depends: kontrakcja-templates
  Build-depends: lifted-base
  Build-depends: lifted-threads
  Build-depends: MissingH
  Build-depends: mixpanel
  Build-depends: mmap
  Build-depends: monad-control
  Build-depends: mtl
  Build-depends: network
  Build-depends: old-locale
  Build-depends: pretty-show
  Build-depends: process
  Build-depends: QuickCheck
  Build-depends: random
  Build-depends: recurly
  Build-depends: regex-tdfa
  Build-depends: resource-pool
  Build-depends: split
  Build-depends: soap
  Build-depends: spreadsheet
  Build-depends: stm
  Build-depends: tagsoup
  Build-depends: template-haskell
  Build-depends: temporary
  Build-depends: test-framework
  Build-depends: test-framework-hunit
  Build-depends: test-framework-quickcheck2
  Build-depends: text
  Build-depends: text-icu
  Build-depends: threads
  Build-depends: time
  Build-depends: transformers
  Build-depends: transformers-base
  Build-depends: unix
  Build-depends: unjson
  Build-depends: unordered-containers
  Build-depends: utf8-string
  Build-depends: vector
  Build-depends: xml-conduit
  Build-depends: xml-conduit-writer
  Build-depends: xml-types
  Build-depends: yaml
  Build-depends: zip-archive
  Build-depends: zlib

  Default-Language: Haskell2010
  Default-Extensions:
    BangPatterns,
    ConstraintKinds,
    DeriveDataTypeable,
    DeriveFunctor,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    MultiParamTypeClasses,
    MultiWayIf,
    NamedFieldPuns,
    NoImplicitPrelude
    OverloadedStrings,
    PatternGuards,
    RankNTypes,
    RecordWildCards,
    ScopedTypeVariables,
    StandaloneDeriving,
    TemplateHaskell,
    TupleSections,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances,
    UndecidableInstances
